# sasctf-finals-2024

./: README.md
crypto-beerloga/: README.md
crypto-beerloga/checker/: check.sh  checker.py  pb_pb2.py
crypto-beerloga/exploit/: exploit_rdsa.sage
crypto-beerloga/service/: docker-compose.yml
crypto-beerloga/service/back/: Dockerfile  beerloga  beerloga-client  start_client.sh
crypto-beerloga/service/cleaner/: Dockerfile  clean.sh  clean.sql
crypto-beerloga/service/postgresql/schemas/: schema.sql
crypto-beerloga/sources/: client_main.m  pr.pb-c.c  pr.pb-c.h  server_main.m
minecraft-library/: README.md
minecraft-library/checker/: Dockerfile  README.MD  bun.lockb  check.sh  index.ts  install.sh  main.ts  package.json  useragents.ts
minecraft-library/checker/patches/: minecraft-protocol@1.47.0.patch  mineflayer@4.20.1.patch  yggdrasil@1.7.0.patch
minecraft-library/service/: docker-compose.yml
minecraft-library/service/AxelAuth/: Dockerfile
minecraft-library/service/LobbyServer/: Dockerfile  eula.txt  server.properties  spigot.yml
minecraft-library/service/LobbyServer/config/: paper-global.yml
minecraft-library/service/LobbyServer/plugins/bStats/: config.yml
minecraft-library/service/PlanetServer/: Dockerfile  bukkit.yml  eula.txt  paper.yml  server.properties  spigot.yml
minecraft-library/service/Proxy/: Dockerfile  forwarding.secret  velocity.toml
minecraft-library/sources/AxelAuth/: .dockerignore  Dockerfile  README.md  build.gradle  micronaut-cli.yml
minecraft-library/sources/PlanetWorld/: build.gradle  settings.gradle
pwn-stocks/: .gitignore  README.md
pwn-stocks/checker/: api.py  checker.py  flask-test-server.py  generators.py  readme.md  ungornilo.py
pwn-stocks/exploit/: exploit.py
pwn-stocks/service/: docker-compose.yml
pwn-stocks/service/back/: Dockerfile  README.md  rust_ffi.hpp
pwn-stocks/service/cleaner/: Dockerfile  clean.sh  clean.sql
pwn-stocks/service/front/: index.html  script.js  styles.css
pwn-stocks/service/nginx/: nginx.conf
pwn-stocks/service/postgresql/schemas/: auth.sql
pwn-stocks/sources/: .clang-tidy  CMakeLists.txt  Makefile  README.md  docker-compose.yml
pwn-stocks/sources/configs/: config_vars.yaml  static_config.yaml
pwn-stocks/sources/schemas/: trusted_trading.yaml
pwn-stocks/sources/src/: background_task_manager.hpp  consts.hpp  jwt_key_generator.cpp  jwt_key_generator.hpp  main.cpp  rust_ffi.hpp  utils.hpp
pwn-stocks/sources/src/benchmarks/: trusted_trading.cpp
pwn-stocks/sources/src/endpoints/: login.cpp  login.hpp  register.cpp  register.hpp  stock_price.cpp  stock_price.hpp  trade_history.cpp  trade_history.hpp  user_info.cpp  user_info.hpp  user_trade_status.cpp  user_trade_status.hpp  user_trade_submit.cpp  user_trade_submit.hpp
pwn-stocks/sources/src/middlewares/: auth_middleware.cpp  auth_middleware.hpp
pwn-stocks/sources/src/sql/: queries.hpp
pwn-stocks/sources/src/tests/: trusted_trading.cpp
pwn-stocks/sources/tests/: test_basic.py
web-koshechko/: README.md
web-koshechko/checker/: checker.py  exploit.py  generators.py  models.py
web-koshechko/exploit/: api.py  exploit.py
web-koshechko/service/: Dockerfile  compose.yaml  go.mod  go.sum  readme
web-koshechko/service/cmd/: main.go
web-koshechko/service/front/: index.html  script.js  style.css
web-koshechko/service/internal/service/: create.go  delete_koshechko.go  delete_user.go  identify.go  login.go  process_lb.go  register.go  service.go  top_koshechko.go  top_users.go  update_koshechko.go  update_user.go  view.go  view_user.go
web-koshechko/service/internal/worker/: worker.go
web-koshechko/service/migrations/: 20241015203457_init.sql
web-koshechko/service/nginx/: nginx.conf
web-spacedj/: .gitignore  Makefile  README.md
web-spacedj/checker/: Dockerfile  README.md  checker.py  config.py  helpers.py  requirements.txt  service_client.py
web-spacedj/exploit/: exploit.py
web-spacedj/service/: docker-compose.yml
web-spacedj/service/backend/: .env  Dockerfile  entrypoint.sh  requirements.txt
web-spacedj/service/backend/app/: main.py  settings.py
web-spacedj/service/frontend/: index.html  remix.html  script.js  style.css
web-spacedj/service/nginx/: nginx.conf
web-spacedj/sources/: build.py  djmodule.c  prep.sh
(+61 files in other folders)
